--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -89,6 +89,9 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
   background: #fff;
+  width: 768px;
+  margin: auto;
+  margin-top: 3rem;
 }
 
 a {
@@ -101,3 +104,33 @@ a {
     color-scheme: dark;
   }
 } */
+
+.menu-flags ul {
+  border: none !important;
+  background-color: #ebedf3 !important;
+  color: #4d4d4d;
+  font-weight: 600;
+  border-radius: 5px;
+  padding: 6px 0;
+}
+
+.menu-flags ul li {
+  padding: 2px 8px;
+}
+
+.menu-flags button {
+  background-color: #ebedf3 !important;
+  border: none !important;
+  border-radius: 5px !important;
+  font-weight: 600;
+  padding: 0 !important;
+}
+
+.menu-flags button span {
+  padding: 0px 4px;
+  margin: 3px 0px;
+}
+
+.menu-flags button::after {
+  display: none !important;
+}
